Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 <li>Plotting on forward and backward solutions from arbitrary initial conditions in the phase plane</li>
 <li>Plotting of the time dependent solutions</li>
 <li>Determination of equilibrium points and calculation of the corresponding Jacobians</li>
-<li>Plotting of selected functions into the phase plane area (i.e. contour lines of Ljapunov-Functions)</li>
+<li>Plotting of selected functions into the phase plane area (i.e. contour lines of Ljapunov-Functions)
+<img src="https://github.com/TUD-RST/pyplane/blob/master/resources/pyplane_logo.png" alt="">
+</li>
 </ul>
         </section>
 
